--- a/cap03/projeto/Estilo.css
+++ b/cap03/projeto/Estilo.css
@@ -1,36 +1,294 @@
-h2{
-    font-size: 1.75em; /* 28/16=1.75 */
+/* Estrutura */
+body {
+    width: 1000px;
+    margin-left: auto;
+    margin-right: auto;
 }
 
-h1{
+header h1 {
+    width: 240px;
+    float: left;
+    background-image: url(../projeto/multimidia/meu-amigo-cao-petshop-header.png);
+    background-repeat: no-repeat;
+    background-position: center center;
+    height: 200px;
+    text-indent: -1000px;
+    margin-bottom: 0px;
+}
+
+header #anuncio {
+    width: 510px;
+    float: left;
+    margin: 80px auto auto;
+    padding-top: 0px;
+}
+
+header section {
+    padding-top: 70px;
+}
+
+header section a[href="boletim.html"] {
+    border: solid #C0262c thin;
+    padding: 15px;
+    border-radius: 15px;
     color: #C0262c;
+    text-decoration: none;
+    font-size: 1.1em;
+}
+
+header section p {
+    color: #999999;
+    margin: 33px auto 7px;
+}
+
+header section figure {
+    width: 100%;
+    margin: 0px;
+}
+
+header section figure a {
+    padding: 25px 5px 0;
+    border: none;
+}
+
+header section figure a:first-child {
+    padding: 25px 5px 0 0;
+}
+
+header section figure a:last-child {
+    padding: 25px 0 0 5px;
+}
+
+main h2 {
+    font-size: 1.75em;
+    /* 28/16=1.75 */
+    background-color: #C0262c url(../projeto/multimidia/back-bolinha.gif) repeat top center;
+    color: #C0262c;
+    letter-spacing: .1em;
+    padding: 7px;
+    width: 316px;
+}
+
+main h1 {
+    color: #C0262c;
+    font-size: 2.5em;
     border-bottom: #C0262c solid thin;
     padding-bottom: 7px;
 }
 
-p{
+/* textos da área principal */
+main p {
     font-size: 1.1em;
-    line-height: 1.3;
+    line-height: 1.3em;
     text-align: justify;
 }
 
-p:first-line {
+main h2+p:first-line {
     font-size: 1.17em;
     font-variant: small-caps;
     font-weight: bolder;
     font-style: italic;
 }
 
-hr{
+main hr {
     border-color: #C0262c;
 }
 
-body{
+body {
     font-family: Arial, Helvetica, sans-serif;
 }
 
-#produtos table{
+#produtos table {
     width: 600px;
     margin: 50px auto 30px;
     text-align: center;
+}
+
+
+#produtos th,
+#produtos td {
+    border: #999 solid 1px;
+    padding: 5px;
+
+}
+
+table {
+    border-collapse: collapse;
+}
+
+tr {
+    border-top: solid 3px #777;
+    border-bottom: solid 3px #777;
+}
+
+th,td {
+    padding: 7px;
+}
+
+#produtos caption {
+    background-color: #999;
+    color: #fff;
+    padding: 15px 0;
+    font-size: 1.5em;
+}
+
+caption {
+    caption-side: bottom;
+    background-color: #777;
+    color: #fff;
+    padding: 10px 0;
+}
+
+#produtos td[coldspan] {
+    font-style: italic;
+    font-weight: bold;
+    color: #999;
+
+}
+
+#produtos tr:hover {
+    background-color: #feff76;
+
+}
+
+body {
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+/* pagina boletim */
+
+form {
+    background-color: #999;
+    margin: 30px 0;
+    padding: 20px;
+    border-radius: 0 15px;
+
+}
+
+input[type="submit"] {
+    background-color: #C0262c;
+    background: linear-gradient(to bottom, #6b1516 0%, #C0262c 30%, #C0262c 70%, #6b1516 100%);
+    border: none;
+    border-radius: 30px;
+    font-size: 1.2em;
+    color: #fff;
+    padding: 10px 30px;
+    margin: 20px;
+    text-shadow: 2px 2px 5px #000;
+    cursor: pointer;
+}
+
+input#nome,
+input#email {
+    background-color: transparent;
+    border: none;
+    border-bottom: #000 solid 1px;
+    font-size: 1.2em;
+    color: #fff;
+    width: 800px;
+}
+
+::-webkit-input-placeholder {
+    /* Chrome / Safari / Opera */
+    color: #ddd;
+    font-style: italic;
+    font-size: .8em;
+}
+
+::-moz-placeholder {
+    /* Firefox */
+    color: #ddd;
+    font-style: italic;
+    font-size: .8em;
+}
+
+:-ms-input-placeholder {
+    /* IE */
+    color: #ddd;
+    font-style: italic;
+    font-size: .8em;
+}
+
+label {
+    display: block;
+    margin-top: 7px;
+    float: left;
+    width: 60px;
+}
+
+#banhoEtosa fieldset {
+    background-color: #fff;
+    border: none;
+    border-radius: 0 15px;
+    margin-bottom: 20px;
+}
+
+#banhoEtosa fieldset legend {
+    background-color: #C0262c;
+    color: #fff;
+    font-weight: bold;
+    letter-spacing: .05em;
+    padding: 10px;
+    margin-left: -13px;
+}
+
+#banhoEtosa fieldset label {
+    display: block;
+    margin-top: 7px;
+    float: left;
+    width: 115px;
+}
+
+#banhoEtosa fieldset input[type="text"],
+#banhoEtosa fieldset input[type="email"] {
+    border: none;
+    border-bottom: #000 solid 1px;
+    font-size: 1.2em;
+    color: #000;
+    width: 770px;
+}
+
+#banhoEtosa fieldset textarea {
+    width: 770px;
+    height: 100px;
+    font-size: 1.2em;
+    border: #000 solid 1px;
+}
+
+#banhoEtosa fieldset label.labelSimples {
+    display: inline;
+    float: none;
+}
+
+#banhoEtosa p {
+    text-align: left;
+}
+
+#banhoEtosa p:first-line {
+    font-size: inherit;
+    font-variant: inherit;
+    font-weight: inherit;
+    font-style: inherit;
+}
+
+#banhoEtosa main h2 {
+    background: #FEF84F url(..projeto/multimidia/postit.jpg) no-repeat top left;
+    color: #000;
+    padding: 35px;
+    /* padding: 35 para cada um dos 4 lados do tamanho postit: 277x185px*/
+    width: 207px;
+    /* 35+35=70 > 277-70=207 */
+    height: 115px;
+    /* 35+35=70 > 185-70=115 */
+    font-size: 1.3125em;
+    /* 21/16=1.3125em */
+}
+
+/* página quem Somos */
+#quemSomos main img {
+    float: left;
+    margin: 0 20px 20px 0;
+    padding: 10px;
+    border: solid #C0262c thin;
+    background-color: #fff;
 }
